#56635 HxAutosuggest - text and icon overlap fixed

--- a/BlazorAppTest/wwwroot/css/site.css
+++ b/BlazorAppTest/wwwroot/css/site.css
@@ -16,3 +16,7 @@
     right: 0.75rem;
     top: 0.5rem;
 }
+
+.hx-autosuggest {
+    padding-right: 35px;
+}
